<resources>
    <string name="app_name">MethoPhotos</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions." </string>
    <string-array name="readers_list">
        <item>All</item>
        <item>Exif and Iptc (JPEG)</item>

    </string-array>
    <string-array name="tags_list">
        <item>All</item>
        <item>[File]</item>
        <item>[JPEG]</item>
        <item>[JFIF]</item>
        <item>[Exif IFD0]</item>
        <item>[Exif SubIFD]</item>
        <item>[Exif Thumbnail]</item>
        <item>[Huffman]</item>
        <item>[File Type]</item>
        <item>[GPS]</item>
    </string-array>

    <!--Strings Related to navigation menu-->
    <string name="Albums">Albums</string>
    <string name="Metadata">Metadata</string>
    <string name="Settings">Settings</string>
    <string name="ManageAccount">Manage Account</string>
    <string name="Logout">Logout</string>
    <string name="About">About</string>
    <string name="Feedback">Feedback</string>
    <string name="Version">Version</string>

    <string name="title_activity_album_on_map">Map</string>
    <!--Strings related to AAG -->
    <string-array name="AAGoptions">
        <item name ="Location">Location</item>
        <item name="Date">Date</item>
    </string-array>

</resources>
