<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single" android:id="@+id/app">
        <item
            android:id="@+id/album"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/Albums">
        </item>
        <item
            android:id="@+id/metadata"
            android:icon="@drawable/ic_metadata"
            android:title="@string/Metadata"/>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/Settings" />

    </group>
    <group android:checkableBehavior="single" android:id="@+id/user">
        <item android:id="@+id/manageAcc"
            android:title="@string/ManageAccount"
            android:icon="@drawable/ic_account_circle_black_24dp"/>
        <item
            android:id="@+id/userLogout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/Logout" />
    </group>
    <group android:checkableBehavior="single" android:menuCategory="secondary" android:id="@+id/appInfo">
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/About"
            />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/Feedback"
            />
        <item
            android:id="@+id/version"
            android:icon="@drawable/ic_perm_device_information_black_24dp"
            android:title="@string/Version"/>
    </group>
</menu>